Profile gap fix

--- a/pages/settings/Profile.module.scss
+++ b/pages/settings/Profile.module.scss
@@ -16,7 +16,6 @@
 
     button {
       width: 100%;
-      margin-top: 1rem;
     }
 
     @include for-tablet-portrait-down {
@@ -52,6 +51,7 @@
     display: flex;
     gap: 1.25rem;
     width: 100%;
+    margin-bottom: 1.25rem;
     > div {
       width: calc(50% - 0.6125rem);
     }
